--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -19,6 +19,14 @@ security:
         main:
             lazy: true
             provider: app_user_provider
+            custom_authenticator: App\Security\LoginFormAuthenticator
+            # guard:
+            #     authenticators:
+            #         - App\Security\LoginFormAuthenticator
+            logout:
+                path: app_logout
+                # where to redirect after logout
+                target: redirect_test
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
